README: Modify README for pip installation of esphome
This is the preferred installation for ESPhome. Installing from source is
'difficult' on a 4GB RaspberryPi.Need to add 4GB of additional swap to make it
work, otherwise it crashes. Building/installing directly from the source also
takes a long time to do on the RaspberryPi4.

--- a/config.yaml
+++ b/config.yaml
@@ -1,18 +1,15 @@
 ---
+http:
+  host: "0.0.0.0"  
+  port: 8080
 system:
   bin:  bin
   data: data
-  tools:
-    - name: esphome
-      environment:
-        VIRTUAL_ENV: "../esphome/venv"
-        PATH: "$VIRTUAL_ENV/bin"
-    - name: esptool
-  devices: devices
+  repos:   data/repos
+  devices: data/devices
+  units:   data/units
 
-devices:
-  - name: demo
-    tasks:
-      - name: query
-        task: esp-status.py
+commands:
+  - name: status
+    command: bin/esp-status.py 
         
